# HasbaraTops

./: .gitignore  AGENTS.history.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  General responses.docx  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/dialogue-lab-closeout/: SKILL.md
.agents/skills/dialogue-lab-followup/: SKILL.md
.agents/skills/dialogue-lab-intake/: SKILL.md
.agents/skills/dialogue-lab-posting/: SKILL.md
.agents/skills/dialogue-lab-strategy-review/: SKILL.md
.codex/: config.toml.example
.github/workflows/: ci.yml
config/: drive-files.toml  storage.toml
docs/: cli-payloads.md  drive-connector-boundary.md  evidence-base.md  migration-receipt.json.example  reply-strategy-guide.md  rollback.md  rollout.md
evals/: README.md
evals/cases/: synthetic-cases.json
scripts/: install-skills.py
skills/dialogue-lab-closeout/: SKILL.md
skills/dialogue-lab-closeout/agents/: openai.yaml
skills/dialogue-lab-followup/: SKILL.md
skills/dialogue-lab-posting/: SKILL.md
skills/dialogue-lab-posting/agents/: openai.yaml
skills/dialogue-lab-strategy-review/: SKILL.md
skills/hasbaratops-closeout/: SKILL.md
skills/hasbaratops-followup/: SKILL.md
skills/hasbaratops-intake/: SKILL.md
skills/hasbaratops-posting/: SKILL.md
skills/hasbaratops-strategy-review/: SKILL.md
src/dialogue_lab/: __init__.py  audit_log.py  case_identity.py  cli.py  drive_models.py  drive_protocol.py  enums.py  errors.py  facebook_url.py  identifiers.py  lifecycle.py  manual_version.py  migration_receipt.py  models.py  parent_graph.py  pending_sync.py  readback.py  schema.py  source_consistency.py  storage.py  validation.py
src/hasbaratops/: __init__.py  case_identity.py  cli.py  enums.py  errors.py  identifiers.py  lifecycle.py  migration_receipt.py  models.py  readback.py  schema.py  source_consistency.py  storage.py  validation.py
templates/: skill-sections.json
templates/sections/: core.md
tests/: helpers.py  test_cli_commands.py  test_facebook_url.py  test_identity_identifiers.py  test_lifecycle_graph_validation.py  test_migration_cli.py  test_pending_audit_receipt_cli.py  test_pending_receipt_cli.py  test_schema_source_write.py  test_sqlite_storage.py
(+11 files in other folders)
