[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "israel-facebook-dialogue-lab"
version = "0.1.0"
description = "Non-canonical Codex execution and validation layer for the Israel Facebook Dialogue Lab"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Dialogue Lab" }]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
urls = { Repository = "https://github.com/RomanOstr/HasbaraTops" }
dependencies = ["tzdata==2026.3"]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[project.scripts]
dialogue-lab = "dialogue_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dialogue_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
