[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "hasbaratops"
version = "0.2.0"
description = "Deterministic local execution and SQLite storage for HasbaraTops"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "HasbaraTops" }]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
urls = { Repository = "https://github.com/Ceratops-Code/HasbaraTops" }
dependencies = ["tzdata==2026.3"]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.16.0",
]

[project.scripts]
HasbaraTops = "hasbaratops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hasbaratops"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
